--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -74,14 +74,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agriculture\DomainModels\FinishGoodProductionDetails.cs" />
+    <Compile Include="Agriculture\DomainModels\FinishGoodProductionInfo.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialIssueStockDetails.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialIssueStockInfo.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStock.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStockDetail.cs" />
+    <Compile Include="Agriculture\DTOModels\FinishGoodProductionDetailsDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\FinishGoodProductionInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDetailDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDTO.cs" />
+    <Compile Include="Agriculture\ViewModels\FinishGoodProductionDetailViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\FinishGoodProductionInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialStockDetailViewModel.cs" />
