--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -162,6 +162,10 @@
     <Compile Include="AgricultureContextMigrations\202209260625243_Agriculture_updatedd.Designer.cs">
       <DependentUpon>202209260625243_Agriculture_updatedd.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209260911503_Agriculture_productionfinishGoodInfoandDetailsAdded.cs" />
+    <Compile Include="AgricultureContextMigrations\202209260911503_Agriculture_productionfinishGoodInfoandDetailsAdded.Designer.cs">
+      <DependentUpon>202209260911503_Agriculture_productionfinishGoodInfoandDetailsAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -255,6 +259,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209260625243_Agriculture_updatedd.resx">
       <DependentUpon>202209260625243_Agriculture_updatedd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209260911503_Agriculture_productionfinishGoodInfoandDetailsAdded.resx">
+      <DependentUpon>202209260911503_Agriculture_productionfinishGoodInfoandDetailsAdded.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
