--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -170,6 +170,10 @@
     <Compile Include="AgricultureContextMigrations\202209270558481_Agriculture_ReceipeUpdate.Designer.cs">
       <DependentUpon>202209270558481_Agriculture_ReceipeUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209270708152_Agriculture_AllUpdate.cs" />
+    <Compile Include="AgricultureContextMigrations\202209270708152_Agriculture_AllUpdate.Designer.cs">
+      <DependentUpon>202209270708152_Agriculture_AllUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -269,6 +273,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209270558481_Agriculture_ReceipeUpdate.resx">
       <DependentUpon>202209270558481_Agriculture_ReceipeUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209270708152_Agriculture_AllUpdate.resx">
+      <DependentUpon>202209270708152_Agriculture_AllUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
