--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -80,12 +80,16 @@
     <Compile Include="Agriculture\DomainModels\RawMaterialIssueStockInfo.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStock.cs" />
     <Compile Include="Agriculture\DomainModels\RawMaterialStockDetail.cs" />
+    <Compile Include="Agriculture\DomainModels\Zone.cs" />
+    <Compile Include="Agriculture\DomainModels\ZoneDetail.cs" />
     <Compile Include="Agriculture\DTOModels\FinishGoodProductionDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\FinishGoodProductionInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDetailDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\ZoneDetailDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\ZoneDTO.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodProductionDetailViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodProductionInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockDetailsViewModel.cs" />
@@ -98,6 +102,8 @@
     <Compile Include="Agriculture\DTOModels\FinishGoodRecipeInfoDTO.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodRecipeDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodRecipeInfoViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\ZoneDetailViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\ZoneViewModel.cs" />
     <Compile Include="Common\DailySellsChart.cs" />
     <Compile Include="Common\DayAndModelWiseProductionChart.cs" />
     <Compile Include="Common\DaysAndLineWiseProductionChart.cs" />
