--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -174,6 +174,10 @@
     <Compile Include="AgricultureContextMigrations\202209270708152_Agriculture_AllUpdate.Designer.cs">
       <DependentUpon>202209270708152_Agriculture_AllUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210040445277_Agriculture_ZoneInfoAndDetail.cs" />
+    <Compile Include="AgricultureContextMigrations\202210040445277_Agriculture_ZoneInfoAndDetail.Designer.cs">
+      <DependentUpon>202210040445277_Agriculture_ZoneInfoAndDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -276,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209270708152_Agriculture_AllUpdate.resx">
       <DependentUpon>202209270708152_Agriculture_AllUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210040445277_Agriculture_ZoneInfoAndDetail.resx">
+      <DependentUpon>202210040445277_Agriculture_ZoneInfoAndDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
