--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Agriculture\DomainModels\RawMaterialStockDetail.cs" />
     <Compile Include="Agriculture\DomainModels\Zone.cs" />
     <Compile Include="Agriculture\DomainModels\ZoneDetail.cs" />
+    <Compile Include="Agriculture\DomainModels\ZoneSetup.cs" />
     <Compile Include="Agriculture\DTOModels\FinishGoodProductionDetailsDTO.cs" />
     <Compile Include="Agriculture\DTOModels\FinishGoodProductionInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\RawMaterialIssueStockDetailsDTO.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Agriculture\DTOModels\RawMaterialStockDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneDetailDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\ZoneSetupDTO.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodProductionDetailViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodProductionInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\RawMaterialIssueStockDetailsViewModel.cs" />
@@ -103,6 +105,7 @@
     <Compile Include="Agriculture\ViewModels\FinishGoodRecipeDetailsViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\FinishGoodRecipeInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\ZoneDetailViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\ZoneSetupViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\ZoneViewModel.cs" />
     <Compile Include="Common\DailySellsChart.cs" />
     <Compile Include="Common\DayAndModelWiseProductionChart.cs" />
