--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -178,6 +178,14 @@
     <Compile Include="AgricultureContextMigrations\202210040445277_Agriculture_ZoneInfoAndDetail.Designer.cs">
       <DependentUpon>202210040445277_Agriculture_ZoneInfoAndDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210060740375_Agriculture_Zones.cs" />
+    <Compile Include="AgricultureContextMigrations\202210060740375_Agriculture_Zones.Designer.cs">
+      <DependentUpon>202210060740375_Agriculture_Zones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgricultureContextMigrations\202210061109237_Agriculture_Zonesup.cs" />
+    <Compile Include="AgricultureContextMigrations\202210061109237_Agriculture_Zonesup.Designer.cs">
+      <DependentUpon>202210061109237_Agriculture_Zonesup.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -283,6 +291,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210040445277_Agriculture_ZoneInfoAndDetail.resx">
       <DependentUpon>202210040445277_Agriculture_ZoneInfoAndDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210060740375_Agriculture_Zones.resx">
+      <DependentUpon>202210060740375_Agriculture_Zones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210061109237_Agriculture_Zonesup.resx">
+      <DependentUpon>202210061109237_Agriculture_Zonesup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
