--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -478,6 +478,7 @@
     <Content Include="Views\AgroConfiguration\_GetZonePartialViewList.cshtml" />
     <Content Include="Views\AgroConfiguration\Zonelist.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetZonePartialView.cshtml" />
+    <Content Include="Views\AgroConfiguration\CreateZonelist.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
