--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -194,6 +194,10 @@
     <Compile Include="AgricultureContextMigrations\202210100531575_Agriculture_DivisionInfo.Designer.cs">
       <DependentUpon>202210100531575_Agriculture_DivisionInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210100753534_regionadd.cs" />
+    <Compile Include="AgricultureContextMigrations\202210100753534_regionadd.Designer.cs">
+      <DependentUpon>202210100753534_regionadd.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -311,6 +315,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210100531575_Agriculture_DivisionInfo.resx">
       <DependentUpon>202210100531575_Agriculture_DivisionInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210100753534_regionadd.resx">
+      <DependentUpon>202210100753534_regionadd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
