--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -202,6 +202,10 @@
     <Compile Include="AgricultureContextMigrations\202210100837257_Agriculture_Depo1.Designer.cs">
       <DependentUpon>202210100837257_Agriculture_Depo1.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210101220143_Agriculture_rtdgdfgdf.cs" />
+    <Compile Include="AgricultureContextMigrations\202210101220143_Agriculture_rtdgdfgdf.Designer.cs">
+      <DependentUpon>202210101220143_Agriculture_rtdgdfgdf.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -325,6 +329,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210100837257_Agriculture_Depo1.resx">
       <DependentUpon>202210100837257_Agriculture_Depo1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210101220143_Agriculture_rtdgdfgdf.resx">
+      <DependentUpon>202210101220143_Agriculture_rtdgdfgdf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
