--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -210,6 +210,10 @@
     <Compile Include="AgricultureContextMigrations\202210110558564_hh.Designer.cs">
       <DependentUpon>202210110558564_hh.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210110624150_Agriculture_Divisiondert.cs" />
+    <Compile Include="AgricultureContextMigrations\202210110624150_Agriculture_Divisiondert.Designer.cs">
+      <DependentUpon>202210110624150_Agriculture_Divisiondert.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -339,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210110558564_hh.resx">
       <DependentUpon>202210110558564_hh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210110624150_Agriculture_Divisiondert.resx">
+      <DependentUpon>202210110624150_Agriculture_Divisiondert.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
