--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -486,6 +486,8 @@
     <Content Include="Views\AgroConfiguration\_GetDivisionPartialView.cshtml" />
     <Content Include="Views\AgroConfiguration\GetArealist.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetRegionPartialView.cshtml" />
+    <Content Include="Views\AgroConfiguration\AreaList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetAreaPartialView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
