--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -218,6 +218,10 @@
     <Compile Include="AgricultureContextMigrations\202210110725405_Agriculture_Areadddedee.Designer.cs">
       <DependentUpon>202210110725405_Agriculture_Areadddedee.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210120543527_Agriculture_StockiestInfo.cs" />
+    <Compile Include="AgricultureContextMigrations\202210120543527_Agriculture_StockiestInfo.Designer.cs">
+      <DependentUpon>202210120543527_Agriculture_StockiestInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -353,6 +357,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210110725405_Agriculture_Areadddedee.resx">
       <DependentUpon>202210110725405_Agriculture_Areadddedee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210120543527_Agriculture_StockiestInfo.resx">
+      <DependentUpon>202210120543527_Agriculture_StockiestInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
