--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -222,6 +222,10 @@
     <Compile Include="AgricultureContextMigrations\202210120817281_Agriculture_tblTerritoryInfos.Designer.cs">
       <DependentUpon>202210120817281_Agriculture_tblTerritoryInfos.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210120911500_Agriculture_StockiestInfo.cs" />
+    <Compile Include="AgricultureContextMigrations\202210120911500_Agriculture_StockiestInfo.Designer.cs">
+      <DependentUpon>202210120911500_Agriculture_StockiestInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -360,6 +364,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210120817281_Agriculture_tblTerritoryInfos.resx">
       <DependentUpon>202210120817281_Agriculture_tblTerritoryInfos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210120911500_Agriculture_StockiestInfo.resx">
+      <DependentUpon>202210120911500_Agriculture_StockiestInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
