--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -226,6 +226,10 @@
     <Compile Include="AgricultureContextMigrations\202210120911500_Agriculture_StockiestInfo.Designer.cs">
       <DependentUpon>202210120911500_Agriculture_StockiestInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210120937134_Agriculture_AddUserAssign.cs" />
+    <Compile Include="AgricultureContextMigrations\202210120937134_Agriculture_AddUserAssign.Designer.cs">
+      <DependentUpon>202210120937134_Agriculture_AddUserAssign.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -367,6 +371,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210120911500_Agriculture_StockiestInfo.resx">
       <DependentUpon>202210120911500_Agriculture_StockiestInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210120937134_Agriculture_AddUserAssign.resx">
+      <DependentUpon>202210120937134_Agriculture_AddUserAssign.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
