--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -230,6 +230,10 @@
     <Compile Include="AgricultureContextMigrations\202210120937134_Agriculture_AddUserAssign.Designer.cs">
       <DependentUpon>202210120937134_Agriculture_AddUserAssign.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210121221068_Agriculture_Rawmererial.cs" />
+    <Compile Include="AgricultureContextMigrations\202210121221068_Agriculture_Rawmererial.Designer.cs">
+      <DependentUpon>202210121221068_Agriculture_Rawmererial.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -374,6 +378,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210120937134_Agriculture_AddUserAssign.resx">
       <DependentUpon>202210120937134_Agriculture_AddUserAssign.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210121221068_Agriculture_Rawmererial.resx">
+      <DependentUpon>202210121221068_Agriculture_Rawmererial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
