--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Agriculture\Interface\IRegionSetup.cs" />
     <Compile Include="Agriculture\Interface\IStockiestInfo.cs" />
     <Compile Include="Agriculture\Interface\ITerritorySetup.cs" />
+    <Compile Include="Agriculture\Interface\IUserAssignBussiness.cs" />
     <Compile Include="Agriculture\Interface\IZone.cs" />
     <Compile Include="Agriculture\Interface\IZoneDetail.cs" />
     <Compile Include="Agriculture\Interface\IZoneSetup.cs" />
@@ -140,6 +141,7 @@
     <Compile Include="Agriculture\RegionSetupBusiness.cs" />
     <Compile Include="Agriculture\StockiestInfoBusiness.cs" />
     <Compile Include="Agriculture\TerritorySetupBusiness.cs" />
+    <Compile Include="Agriculture\UserAssignBussiness.cs" />
     <Compile Include="Agriculture\ZoneBusiness.cs" />
     <Compile Include="Agriculture\ZoneDetailBusiness.cs" />
     <Compile Include="Agriculture\ZoneSetupBusiness.cs" />
