--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -234,6 +234,10 @@
     <Compile Include="AgricultureContextMigrations\202210121221068_Agriculture_Rawmererial.Designer.cs">
       <DependentUpon>202210121221068_Agriculture_Rawmererial.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210130656216_Agriculture_OrganizationId.cs" />
+    <Compile Include="AgricultureContextMigrations\202210130656216_Agriculture_OrganizationId.Designer.cs">
+      <DependentUpon>202210130656216_Agriculture_OrganizationId.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -381,6 +385,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210121221068_Agriculture_Rawmererial.resx">
       <DependentUpon>202210121221068_Agriculture_Rawmererial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210130656216_Agriculture_OrganizationId.resx">
+      <DependentUpon>202210130656216_Agriculture_OrganizationId.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
