--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Agriculture\DomainModels\StockiestInfo.cs" />
     <Compile Include="Agriculture\DomainModels\TerritorySetup.cs" />
     <Compile Include="Agriculture\DomainModels\UserAssign.cs" />
+    <Compile Include="Agriculture\DomainModels\UserInfo.cs" />
     <Compile Include="Agriculture\DomainModels\Zone.cs" />
     <Compile Include="Agriculture\DomainModels\ZoneDetail.cs" />
     <Compile Include="Agriculture\DomainModels\ZoneSetup.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Agriculture\DTOModels\StockiestInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\TerritorySetupDTO.cs" />
     <Compile Include="Agriculture\DTOModels\UserAssignDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\UserInfoDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneDetailDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneSetupDTO.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="Agriculture\ViewModels\StockiestInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\TerritorySetupViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\UserAssignViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\UserInfoViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\ZoneDetailViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\ZoneSetupViewModel.cs" />
     <Compile Include="Agriculture\ViewModels\ZoneViewModel.cs" />
