--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -238,6 +238,14 @@
     <Compile Include="AgricultureContextMigrations\202210130656216_Agriculture_OrganizationId.Designer.cs">
       <DependentUpon>202210130656216_Agriculture_OrganizationId.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210131048516_Agriculture_UserInfo.cs" />
+    <Compile Include="AgricultureContextMigrations\202210131048516_Agriculture_UserInfo.Designer.cs">
+      <DependentUpon>202210131048516_Agriculture_UserInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgricultureContextMigrations\202210131051435_Agriculture_UserInfoMigration.cs" />
+    <Compile Include="AgricultureContextMigrations\202210131051435_Agriculture_UserInfoMigration.Designer.cs">
+      <DependentUpon>202210131051435_Agriculture_UserInfoMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -388,6 +396,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210130656216_Agriculture_OrganizationId.resx">
       <DependentUpon>202210130656216_Agriculture_OrganizationId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210131048516_Agriculture_UserInfo.resx">
+      <DependentUpon>202210131048516_Agriculture_UserInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210131051435_Agriculture_UserInfoMigration.resx">
+      <DependentUpon>202210131051435_Agriculture_UserInfoMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
